// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders snapshot 1`] = `
<div>
  <li
    class="item"
  >
    <span
      style="width: 40%;"
    >
      <a
        href="https://reactjs.org"
      >
        React
      </a>
    </span>
    <span
      style="width: 30%;"
    >
      Jordan Walke
    </span>
    <span
      style="width: 10%;"
    >
      3
    </span>
    <span
      style="width: 10%;"
    >
      4
    </span>
    <span
      style="width: 10%;"
    >
      <button
        class="button button-small"
        type="button"
      >
        Dismiss
      </button>
    </span>
  </li>
</div>
`;

exports[`List renders snapshot 1`] = `
<div>
  <ul>
    <li
      class="item"
    >
      <span
        style="width: 40%;"
      >
        <a
          href="https://reactjs.org"
        >
          React
        </a>
      </span>
      <span
        style="width: 30%;"
      >
        Jordan Walke
      </span>
      <span
        style="width: 10%;"
      >
        3
      </span>
      <span
        style="width: 10%;"
      >
        4
      </span>
      <span
        style="width: 10%;"
      >
        <button
          class="button button-small"
          type="button"
        >
          Dismiss
        </button>
      </span>
    </li>
    <li
      class="item"
    >
      <span
        style="width: 40%;"
      >
        <a
          href="https://redux.js.org"
        >
          Redux
        </a>
      </span>
      <span
        style="width: 30%;"
      >
        Dan Abramov, Andrew Clark
      </span>
      <span
        style="width: 10%;"
      >
        2
      </span>
      <span
        style="width: 10%;"
      >
        5
      </span>
      <span
        style="width: 10%;"
      >
        <button
          class="button button-small"
          type="button"
        >
          Dismiss
        </button>
      </span>
    </li>
  </ul>
</div>
`;
